--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "meetingzero_web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=12.4.0"
+  },
   "dependencies": {
     "@babel/core": "7.9.0",
     "@reduxjs/toolkit": "^1.1.0",
@@ -38,6 +41,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -47,9 +51,11 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-bootstrap": "^1.0.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
