--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "resolve": "1.15.0",
