--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@rails/actioncable": "^6.0.3-2",
     "@reduxjs/toolkit": "^1.1.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
