--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-hook-form": "^5.7.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
+    "react-tagsinput": "^3.19.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
