--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.0.1",
+    "react-datetime-picker": "^3.0.2",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
