--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
+    "universal-cookie": "^4.0.4",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
     "webpack-dev-server": "^3.11.0",
