--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.9.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
