--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.1",
+    "react-password-strength-bar": "^0.3.2",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
