--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "query-string": "^6.13.0",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.0.1",
     "react-datetime-picker": "^3.0.2",
@@ -72,11 +72,11 @@
     "react-tagsinput": "^3.19.0",
     "react-transition-group": "^4.4.1",
     "resolve": "1.15.0",
-    "resolve-url-loader": "3.1.1",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
-    "terser-webpack-plugin": "2.3.5",
+    "terser-webpack-plugin": "^5.0.3",
     "ts-pnp": "1.1.6",
     "universal-cookie": "^4.0.4",
     "url-loader": "2.3.0",
