--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "animate.css": "^4.1.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -72,11 +72,11 @@
     "react-tagsinput": "^3.19.0",
     "react-transition-group": "^4.4.1",
     "resolve": "1.15.0",
-    "resolve-url-loader": "3.1.1",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
-    "terser-webpack-plugin": "2.3.5",
+    "terser-webpack-plugin": "^4.2.3",
     "ts-pnp": "1.1.6",
     "universal-cookie": "^4.0.4",
     "url-loader": "2.3.0",
